--- a/scm-webapp/pom.xml
+++ b/scm-webapp/pom.xml
@@ -6,13 +6,13 @@
   <parent>
     <groupId>sonia.scm</groupId>
     <artifactId>scm</artifactId>
-    <version>1.18-SNAPSHOT</version>
+    <version>1.18</version>
   </parent>
 
   <groupId>sonia.scm</groupId>
   <artifactId>scm-webapp</artifactId>
   <packaging>war</packaging>
-  <version>1.18-SNAPSHOT</version>
+  <version>1.18</version>
   <name>scm-webapp</name>
 
   <dependencies>
@@ -38,31 +38,31 @@
     <dependency>
       <groupId>sonia.scm</groupId>
       <artifactId>scm-core</artifactId>
-      <version>1.18-SNAPSHOT</version>
+      <version>1.18</version>
     </dependency>
     
     <dependency>
       <groupId>sonia.scm</groupId>
       <artifactId>scm-dao-xml</artifactId>
-      <version>1.18-SNAPSHOT</version>
+      <version>1.18</version>
     </dependency>
 
     <dependency>
       <groupId>sonia.scm.plugins</groupId>
       <artifactId>scm-hg-plugin</artifactId>
-      <version>1.18-SNAPSHOT</version>
+      <version>1.18</version>
     </dependency>
 
     <dependency>
       <groupId>sonia.scm.plugins</groupId>
       <artifactId>scm-svn-plugin</artifactId>
-      <version>1.18-SNAPSHOT</version>
+      <version>1.18</version>
     </dependency>
 
     <dependency>
       <groupId>sonia.scm.plugins</groupId>
       <artifactId>scm-git-plugin</artifactId>
-      <version>1.18-SNAPSHOT</version>
+      <version>1.18</version>
     </dependency>
 
     <!-- rest api -->
@@ -221,7 +221,7 @@
     <dependency>
       <groupId>sonia.scm</groupId>
       <artifactId>scm-test</artifactId>
-      <version>1.18-SNAPSHOT</version>
+      <version>1.18</version>
       <scope>test</scope>
       <exclusions>
         <exclusion>
@@ -234,7 +234,7 @@
     <dependency>
       <groupId>sonia.scm.plugins</groupId>
       <artifactId>scm-git-plugin</artifactId>
-      <version>1.18-SNAPSHOT</version>
+      <version>1.18</version>
       <classifier>tests</classifier>
       <scope>test</scope>
     </dependency>
@@ -242,7 +242,7 @@
     <dependency>
       <groupId>sonia.scm.plugins</groupId>
       <artifactId>scm-hg-plugin</artifactId>
-      <version>1.18-SNAPSHOT</version>
+      <version>1.18</version>
       <classifier>tests</classifier>
       <scope>test</scope>
     </dependency>
@@ -250,7 +250,7 @@
     <dependency>
       <groupId>sonia.scm.plugins</groupId>
       <artifactId>scm-svn-plugin</artifactId>
-      <version>1.18-SNAPSHOT</version>
+      <version>1.18</version>
       <classifier>tests</classifier>
       <scope>test</scope>
     </dependency>
@@ -411,7 +411,7 @@
         <dependency>
           <groupId>sonia.scm</groupId>
           <artifactId>scm-dao-orientdb</artifactId>
-          <version>1.18-SNAPSHOT</version>
+          <version>1.18</version>
         </dependency>
         
       </dependencies>
