--- a/support/scm-support-btrace/pom.xml
+++ b/support/scm-support-btrace/pom.xml
@@ -1,16 +1,15 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
     <groupId>sonia.scm.support</groupId>
     <artifactId>scm-support</artifactId>
-    <version>1.18-SNAPSHOT</version>
+    <version>1.18</version>
   </parent>
 
   <groupId>sonia.scm</groupId>
   <artifactId>scm-support-btrace</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0</version>
   <packaging>jar</packaging>
   <name>scm-support-btrace</name>
   
@@ -19,7 +18,7 @@
     <dependency>
       <groupId>sonia.scm</groupId>
       <artifactId>scm-core</artifactId>
-      <version>1.18-SNAPSHOT</version>
+      <version>1.18</version>
     </dependency>
     
     <!-- servlet api -->
