--- a/scm-plugins/scm-hg-plugin/pom.xml
+++ b/scm-plugins/scm-hg-plugin/pom.xml
@@ -28,7 +28,7 @@
     <dependency>
       <groupId>com.aragost.javahg</groupId>
       <artifactId>javahg</artifactId>
-      <version>0.3.1-scm</version>
+      <version>0.4</version>
     </dependency>
 
     <!-- test scope -->
@@ -71,7 +71,6 @@
       <url>http://maven.scm-manager.org/nexus/content/groups/public</url>
     </repository>
     
-    <!--
     <repository>
       <releases>
         <enabled>false</enabled>
@@ -82,9 +81,8 @@
       <id>sonatype-ossrh</id>
       <name>Sonatype Open Source Software Repository Hosting</name>
       <layout>default</layout>
-      <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
+      <url>https://oss.sonatype.org/content/groups/public/</url>
     </repository>
-    -->
   
   </repositories>
  
