--- a/support/scm-support-btrace/pom.xml
+++ b/support/scm-support-btrace/pom.xml
@@ -4,12 +4,12 @@
   <parent>
     <groupId>sonia.scm.support</groupId>
     <artifactId>scm-support</artifactId>
-    <version>1.19</version>
+    <version>1.20-SNAPSHOT</version>
   </parent>
 
   <groupId>sonia.scm</groupId>
   <artifactId>scm-support-btrace</artifactId>
-  <version>1.1</version>
+  <version>1.2-SNAPSHOT</version>
   <packaging>jar</packaging>
   <name>scm-support-btrace</name>
   
@@ -18,7 +18,7 @@
     <dependency>
       <groupId>sonia.scm</groupId>
       <artifactId>scm-core</artifactId>
-      <version>1.19</version>
+      <version>1.20-SNAPSHOT</version>
     </dependency>
     
     <!-- servlet api -->
