added java.awt.headless system property to server startup scripts

--- a/scm-server/pom.xml
+++ b/scm-server/pom.xml
@@ -83,6 +83,7 @@
                   
                   <jvmSettings>
                     <systemProperties>
+                      <arg>java.awt.headless=true</arg>
                       <arg>logback.configurationFile=logging.xml</arg>
                     </systemProperties>
                   </jvmSettings>
