--- a/pom.xml
+++ b/pom.xml
@@ -401,6 +401,9 @@
     <freemarker.version>2.3.19</freemarker.version>
     <jetty.version>7.6.5.v20120716</jetty.version>
     
+    <!-- security libraries -->
+    <shiro.version>1.2.1</shiro.version>
+    
     <!-- repostitory libraries -->
     <jgit.version>2.0.0.201206130900-r</jgit.version>
     <svnkit.version>1.7.5-2</svnkit.version>
