--- a/scm-webapp/pom.xml
+++ b/scm-webapp/pom.xml
@@ -64,6 +64,20 @@
       <artifactId>scm-git-plugin</artifactId>
       <version>1.21-SNAPSHOT</version>
     </dependency>
+    
+    <!-- security -->
+
+    <dependency>
+      <groupId>org.apache.shiro</groupId>
+      <artifactId>shiro-web</artifactId>
+      <version>${shiro.version}</version>
+    </dependency>
+            
+    <dependency>
+      <groupId>org.apache.shiro</groupId>
+      <artifactId>shiro-guice</artifactId>
+      <version>${shiro.version}</version>
+    </dependency>
 
     <!-- rest api -->
 
