--- a/maven/scm-maven-plugin/pom.xml
+++ b/maven/scm-maven-plugin/pom.xml
@@ -35,19 +35,31 @@
     <dependency>
       <groupId>org.apache.maven</groupId>
       <artifactId>maven-plugin-api</artifactId>
-      <version>2.2.1</version>
+      <version>${mavenVersion}</version>
     </dependency>
 
     <dependency>
       <groupId>org.apache.maven</groupId>
       <artifactId>maven-artifact</artifactId>
-      <version>2.2.1</version>
+      <version>${mavenVersion}</version>
     </dependency>
     
     <dependency>
       <groupId>org.apache.maven</groupId>
       <artifactId>maven-project</artifactId>
-      <version>2.2.1</version>
+      <version>${mavenVersion}</version>
+    </dependency>
+    
+    <dependency>
+      <groupId>org.apache.maven</groupId>
+      <artifactId>maven-model</artifactId>
+      <version>${mavenVersion}</version>
+    </dependency>
+    
+    <dependency>
+      <groupId>org.codehaus.plexus</groupId>
+      <artifactId>plexus-utils</artifactId>
+      <version>1.5.6</version>
     </dependency>
     
     <dependency>
@@ -75,5 +87,9 @@
     </dependency>
     
   </dependencies>
+  
+  <properties>
+    <mavenVersion>2.0.6</mavenVersion>
+  </properties>
 
 </project>
