added api to install plugin packages

--- a/scm-webapp/pom.xml
+++ b/scm-webapp/pom.xml
@@ -107,6 +107,12 @@
       </exclusions>
     </dependency>
     
+    <dependency>
+      <groupId>com.sun.jersey.contribs</groupId>
+      <artifactId>jersey-multipart</artifactId>
+      <version>${jersey.version}</version>
+    </dependency>
+    
     <!-- injection -->
 
     <dependency>
@@ -200,6 +206,12 @@
     <dependency>
       <groupId>org.sonatype.aether</groupId>
       <artifactId>aether-connector-asynchttpclient</artifactId>
+      <version>${aether.version}</version>
+    </dependency>
+    
+    <dependency>
+      <groupId>org.sonatype.aether</groupId>
+      <artifactId>aether-connector-file</artifactId>
       <version>${aether.version}</version>
     </dependency>
     
