exclude unused dependencies

--- a/scm-clients/pom.xml
+++ b/scm-clients/pom.xml
@@ -23,10 +23,50 @@
   
   <dependencies>
 
+    <!-- 
+    scm-core with excludes.
+    TODO: create a module only for data objects.
+    -->
+    
     <dependency>
-      <groupId>sonia.scm</groupId>
       <artifactId>scm-core</artifactId>
+      <groupId>sonia.scm</groupId>
+      <type>jar</type>
       <version>1.21-SNAPSHOT</version>
+      <exclusions>
+        <exclusion>
+          <artifactId>shiro-core</artifactId>
+          <groupId>org.apache.shiro</groupId>
+        </exclusion>
+        <exclusion>
+          <artifactId>aopalliance</artifactId>
+          <groupId>aopalliance</groupId>
+        </exclusion>
+        <exclusion>
+          <artifactId>guice</artifactId>
+          <groupId>com.google.inject</groupId>
+        </exclusion>
+        <exclusion>
+          <artifactId>guice-multibindings</artifactId>
+          <groupId>com.google.inject.extensions</groupId>
+        </exclusion>
+        <exclusion>
+          <artifactId>guice-servlet</artifactId>
+          <groupId>com.google.inject.extensions</groupId>
+        </exclusion>
+        <exclusion>
+          <artifactId>jersey-core</artifactId>
+          <groupId>com.sun.jersey</groupId>
+        </exclusion>
+        <exclusion>
+          <artifactId>guice-throwingproviders</artifactId>
+          <groupId>com.google.inject.extensions</groupId>
+        </exclusion>
+        <exclusion>
+          <artifactId>commons-lang</artifactId>
+          <groupId>commons-lang</groupId>
+        </exclusion>
+      </exclusions>
     </dependency>
 
   </dependencies>
