execute jetty plugin with java.awt.headless=true

--- a/scm-webapp/pom.xml
+++ b/scm-webapp/pom.xml
@@ -387,6 +387,10 @@
               <name>scm.stage</name>
               <value>${scm.stage}</value>
             </systemProperty>
+            <systemProperty>
+              <name>java.awt.headless</name>
+              <value>true</value>
+            </systemProperty>
           </systemProperties>
           <connectors>
             <connector implementation="org.mortbay.jetty.nio.SelectChannelConnector">
