--- a/scm-clients/scm-client-impl/pom.xml
+++ b/scm-clients/scm-client-impl/pom.xml
@@ -186,8 +186,8 @@
       
           <plugin>
             <groupId>org.mortbay.jetty</groupId>
-            <artifactId>maven-jetty-plugin</artifactId>
-            <version>6.1.26</version>
+            <artifactId>jetty-maven-plugin</artifactId>
+            <version>${jetty.version}</version>
             <configuration>
               <stopPort>8085</stopPort>
               <stopKey>STOP</stopKey>
@@ -202,13 +202,16 @@
                 </systemProperty>
               </systemProperties>
               <connectors>
-                <connector implementation="org.mortbay.jetty.nio.SelectChannelConnector">
+                <connector implementation="org.eclipse.jetty.server.nio.SelectChannelConnector">
                   <port>8081</port>
                   <maxIdleTime>60000</maxIdleTime>
+                  <requestHeaderSize>16384</requestHeaderSize>
                 </connector>
               </connectors>
-              <contextPath>/scm</contextPath>
-              <webApp>${project.build.directory}/webapp/scm-webapp.war</webApp>
+              <webApp>
+                <contextPath>/scm</contextPath>
+              </webApp>
+              <war>${project.build.directory}/webapp/scm-webapp.war</war>
               <source>${project.build.javaLevel}</source>
               <target>${project.build.javaLevel}</target>
               <encoding>${project.build.sourceEncoding}</encoding>
