--- a/scm-webapp/pom.xml
+++ b/scm-webapp/pom.xml
@@ -373,8 +373,8 @@
 
       <plugin>
         <groupId>org.mortbay.jetty</groupId>
-        <artifactId>maven-jetty-plugin</artifactId>
-        <version>6.1.26</version>
+        <artifactId>jetty-maven-plugin</artifactId>
+        <version>${jetty.version}</version>
         <configuration>
           <stopPort>8005</stopPort>
           <stopKey>STOP</stopKey>
@@ -393,13 +393,15 @@
             </systemProperty>
           </systemProperties>
           <connectors>
-            <connector implementation="org.mortbay.jetty.nio.SelectChannelConnector">
+            <connector implementation="org.eclipse.jetty.server.nio.SelectChannelConnector">
               <port>8081</port>
               <maxIdleTime>60000</maxIdleTime>
-              <headerBufferSize>16384</headerBufferSize>
+              <requestHeaderSize>16384</requestHeaderSize>
             </connector>
           </connectors>
-          <contextPath>/scm</contextPath>
+          <webApp>
+            <contextPath>/scm</contextPath>
+          </webApp>
           <source>${project.build.javaLevel}</source>
           <target>${project.build.javaLevel}</target>
           <encoding>${project.build.sourceEncoding}</encoding>
@@ -519,8 +521,8 @@
 
           <plugin>
             <groupId>org.mortbay.jetty</groupId>
-            <artifactId>maven-jetty-plugin</artifactId>
-            <version>6.1.26</version>
+            <artifactId>jetty-maven-plugin</artifactId>
+            <version>${jetty.version}</version>
             <configuration>
               <stopPort>8085</stopPort>
               <stopKey>STOP</stopKey>
@@ -531,9 +533,10 @@
                 </systemProperty>
               </systemProperties>
               <connectors>
-                <connector implementation="org.mortbay.jetty.nio.SelectChannelConnector">
+                <connector implementation="org.eclipse.jetty.server.nio.SelectChannelConnector">
                   <port>8081</port>
                   <maxIdleTime>60000</maxIdleTime>
+                  <requestHeaderSize>16384</requestHeaderSize>
                 </connector>
               </connectors>
               <source>${project.build.javaLevel}</source>
@@ -598,8 +601,8 @@
           
           <plugin>
             <groupId>org.mortbay.jetty</groupId>
-            <artifactId>maven-jetty-plugin</artifactId>
-            <version>6.1.26</version>
+            <artifactId>jetty-maven-plugin</artifactId>
+            <version>${jetty.version}</version>
             <configuration>
               <stopPort>8086</stopPort>
               <stopKey>STOP</stopKey>
@@ -610,9 +613,10 @@
                 </systemProperty>
               </systemProperties>
               <connectors>
-                <connector implementation="org.mortbay.jetty.nio.SelectChannelConnector">
-                  <port>8082</port>
+                <connector implementation="org.eclipse.jetty.server.nio.SelectChannelConnector">
+                  <port>8081</port>
                   <maxIdleTime>60000</maxIdleTime>
+                  <requestHeaderSize>16384</requestHeaderSize>
                 </connector>
               </connectors>
               <source>${project.build.javaLevel}</source>
