fix license headers

--- a/scm-webapp/pom.xml
+++ b/scm-webapp/pom.xml
@@ -343,6 +343,7 @@
             <exclude>.hg/**</exclude>
             <exclude>**/extjs/**</exclude>
             <exclude>**/syntaxhighlighter/**</exclude>
+            <exclude>**/*.mustache</exclude>
           </excludes>
           <strictCheck>true</strictCheck>
         </configuration>
