added min-version condition to plugin archetype

--- a/maven/scm-plugin-archetype/src/main/resources/archetype-resources/src/main/resources/META-INF/scm/plugin.xml
+++ b/maven/scm-plugin-archetype/src/main/resources/archetype-resources/src/main/resources/META-INF/scm/plugin.xml
@@ -46,6 +46,10 @@
     -->
   </information>
 
+  <conditions>
+    <min-version>${dollar}{project.parent.version}</min-version>
+  </conditions>
+
   <packages>
     <package>${package}</package>
   </packages>
