--- a/pom.xml
+++ b/pom.xml
@@ -114,7 +114,7 @@
 
     <dependency>
       <groupId>junit</groupId>
-      <artifactId>junit-dep</artifactId>
+      <artifactId>junit</artifactId>
       <version>${junit.version}</version>
       <scope>test</scope>
     </dependency>
@@ -402,7 +402,7 @@
     <!-- test libraries -->
     <mokito.version>1.9.5</mokito.version>
     <hamcrest.version>1.3</hamcrest.version>
-    <junit.version>4.10</junit.version>
+    <junit.version>4.11</junit.version>
     
     <!-- logging libraries -->
     <slf4j.version>1.7.2</slf4j.version>
