--- a/scm-webapp/pom.xml
+++ b/scm-webapp/pom.xml
@@ -290,14 +290,14 @@
     <dependency>
       <groupId>org.seleniumhq.selenium</groupId>
       <artifactId>selenium-java</artifactId>
-      <version>2.25.0</version>
+      <version>${selenium.version}</version>
       <scope>test</scope>
     </dependency>
     
     <dependency>
       <groupId>org.seleniumhq.selenium</groupId>
       <artifactId>selenium-firefox-driver</artifactId>
-      <version>2.25.0</version>
+      <version>${selenium.version}</version>
       <scope>test</scope>
     </dependency>
     
@@ -434,6 +434,7 @@
     <scm.stage>DEVELOPMENT</scm.stage>
     <scm.home>target/scm-it</scm.home>
     <environment.profile>default</environment.profile>
+    <selenium.version>2.28.0</selenium.version>
     <enunciate.version>1.26.1</enunciate.version>
     <aether.version>1.13.1</aether.version>
     <wagon.version>1.0</wagon.version>
