--- a/scm-webapp/pom.xml
+++ b/scm-webapp/pom.xml
@@ -6,13 +6,13 @@
   <parent>
     <groupId>sonia.scm</groupId>
     <artifactId>scm</artifactId>
-    <version>1.23-SNAPSHOT</version>
+    <version>1.23</version>
   </parent>
 
   <groupId>sonia.scm</groupId>
   <artifactId>scm-webapp</artifactId>
   <packaging>war</packaging>
-  <version>1.23-SNAPSHOT</version>
+  <version>1.23</version>
   <name>scm-webapp</name>
 
   <dependencies>
@@ -38,31 +38,31 @@
     <dependency>
       <groupId>sonia.scm</groupId>
       <artifactId>scm-core</artifactId>
-      <version>1.23-SNAPSHOT</version>
+      <version>1.23</version>
     </dependency>
     
     <dependency>
       <groupId>sonia.scm</groupId>
       <artifactId>scm-dao-xml</artifactId>
-      <version>1.23-SNAPSHOT</version>
+      <version>1.23</version>
     </dependency>
 
     <dependency>
       <groupId>sonia.scm.plugins</groupId>
       <artifactId>scm-hg-plugin</artifactId>
-      <version>1.23-SNAPSHOT</version>
+      <version>1.23</version>
     </dependency>
 
     <dependency>
       <groupId>sonia.scm.plugins</groupId>
       <artifactId>scm-svn-plugin</artifactId>
-      <version>1.23-SNAPSHOT</version>
+      <version>1.23</version>
     </dependency>
 
     <dependency>
       <groupId>sonia.scm.plugins</groupId>
       <artifactId>scm-git-plugin</artifactId>
-      <version>1.23-SNAPSHOT</version>
+      <version>1.23</version>
     </dependency>
     
     <!-- security -->
@@ -253,7 +253,7 @@
     <dependency>
       <groupId>sonia.scm</groupId>
       <artifactId>scm-test</artifactId>
-      <version>1.23-SNAPSHOT</version>
+      <version>1.23</version>
       <scope>test</scope>
       <exclusions>
         <exclusion>
@@ -266,7 +266,7 @@
     <dependency>
       <groupId>sonia.scm.plugins</groupId>
       <artifactId>scm-git-plugin</artifactId>
-      <version>1.23-SNAPSHOT</version>
+      <version>1.23</version>
       <classifier>tests</classifier>
       <scope>test</scope>
     </dependency>
@@ -274,7 +274,7 @@
     <dependency>
       <groupId>sonia.scm.plugins</groupId>
       <artifactId>scm-hg-plugin</artifactId>
-      <version>1.23-SNAPSHOT</version>
+      <version>1.23</version>
       <classifier>tests</classifier>
       <scope>test</scope>
     </dependency>
@@ -282,7 +282,7 @@
     <dependency>
       <groupId>sonia.scm.plugins</groupId>
       <artifactId>scm-svn-plugin</artifactId>
-      <version>1.23-SNAPSHOT</version>
+      <version>1.23</version>
       <classifier>tests</classifier>
       <scope>test</scope>
     </dependency>
@@ -453,7 +453,7 @@
         <dependency>
           <groupId>sonia.scm</groupId>
           <artifactId>scm-dao-orientdb</artifactId>
-          <version>1.23-SNAPSHOT</version>
+          <version>1.23</version>
         </dependency>
         
       </dependencies>
