--- a/pom.xml
+++ b/pom.xml
@@ -419,7 +419,7 @@
 
     <!-- repostitory libraries -->
     <jgit.version>2.1.0.201209190230-r</jgit.version>
-    <svnkit.version>1.7.6-scm4-SNAPSHOT</svnkit.version>
+    <svnkit.version>1.7.6-scm4</svnkit.version>
 
     <!-- build properties -->
     <project.build.javaLevel>1.6</project.build.javaLevel>
