--- a/scm-plugin-backend/pom.xml
+++ b/scm-plugin-backend/pom.xml
@@ -102,6 +102,12 @@
       <artifactId>shiro-guice</artifactId>
       <version>${shiro.version}</version>
     </dependency>
+    
+    <dependency>
+      <groupId>org.apache.shiro</groupId>
+      <artifactId>shiro-ehcache</artifactId>
+      <version>${shiro.version}</version>
+    </dependency>
 
   </dependencies>
 
