--- a/scm-webapp/pom.xml
+++ b/scm-webapp/pom.xml
@@ -440,7 +440,7 @@
     <wagon.version>1.0</wagon.version>
     <maven.version>3.0.4</maven.version>
     <mustache.version>0.8.9</mustache.version>
-    <netbeans.hint.deploy.server>gfv3ee6</netbeans.hint.deploy.server>
+    <netbeans.hint.deploy.server>Tomcat</netbeans.hint.deploy.server>
   </properties>
 
   <profiles>
