added scm.home example for windows

--- a/scm-webapp/src/main/resources/scm.properties
+++ b/scm-webapp/src/main/resources/scm.properties
@@ -31,3 +31,6 @@
 
 # path to the SCM-Manager base directory
 # scm.home = /tmp/scm.home
+  
+# note: on windows the path separator must be escaped e.g.:
+# scm.home = C:\\DataStorage\\SCM
