[maven-release-plugin] prepare release 1.30

--- a/scm-webapp/pom.xml
+++ b/scm-webapp/pom.xml
@@ -6,13 +6,13 @@
   <parent>
     <groupId>sonia.scm</groupId>
     <artifactId>scm</artifactId>
-    <version>1.30-SNAPSHOT</version>
+    <version>1.30</version>
   </parent>
 
   <groupId>sonia.scm</groupId>
   <artifactId>scm-webapp</artifactId>
   <packaging>war</packaging>
-  <version>1.30-SNAPSHOT</version>
+  <version>1.30</version>
   <name>scm-webapp</name>
 
   <dependencies>
@@ -38,31 +38,31 @@
     <dependency>
       <groupId>sonia.scm</groupId>
       <artifactId>scm-core</artifactId>
-      <version>1.30-SNAPSHOT</version>
+      <version>1.30</version>
     </dependency>
     
     <dependency>
       <groupId>sonia.scm</groupId>
       <artifactId>scm-dao-xml</artifactId>
-      <version>1.30-SNAPSHOT</version>
+      <version>1.30</version>
     </dependency>
 
     <dependency>
       <groupId>sonia.scm.plugins</groupId>
       <artifactId>scm-hg-plugin</artifactId>
-      <version>1.30-SNAPSHOT</version>
+      <version>1.30</version>
     </dependency>
 
     <dependency>
       <groupId>sonia.scm.plugins</groupId>
       <artifactId>scm-svn-plugin</artifactId>
-      <version>1.30-SNAPSHOT</version>
+      <version>1.30</version>
     </dependency>
 
     <dependency>
       <groupId>sonia.scm.plugins</groupId>
       <artifactId>scm-git-plugin</artifactId>
-      <version>1.30-SNAPSHOT</version>
+      <version>1.30</version>
     </dependency>
     
     <!-- security -->
@@ -265,7 +265,7 @@
     <dependency>
       <groupId>sonia.scm</groupId>
       <artifactId>scm-test</artifactId>
-      <version>1.30-SNAPSHOT</version>
+      <version>1.30</version>
       <scope>test</scope>
       <exclusions>
         <exclusion>
@@ -278,7 +278,7 @@
     <dependency>
       <groupId>sonia.scm.plugins</groupId>
       <artifactId>scm-git-plugin</artifactId>
-      <version>1.30-SNAPSHOT</version>
+      <version>1.30</version>
       <classifier>tests</classifier>
       <scope>test</scope>
     </dependency>
@@ -286,7 +286,7 @@
     <dependency>
       <groupId>sonia.scm.plugins</groupId>
       <artifactId>scm-hg-plugin</artifactId>
-      <version>1.30-SNAPSHOT</version>
+      <version>1.30</version>
       <classifier>tests</classifier>
       <scope>test</scope>
     </dependency>
@@ -294,7 +294,7 @@
     <dependency>
       <groupId>sonia.scm.plugins</groupId>
       <artifactId>scm-svn-plugin</artifactId>
-      <version>1.30-SNAPSHOT</version>
+      <version>1.30</version>
       <classifier>tests</classifier>
       <scope>test</scope>
     </dependency>
@@ -477,7 +477,7 @@
         <dependency>
           <groupId>sonia.scm</groupId>
           <artifactId>scm-dao-orientdb</artifactId>
-          <version>1.30-SNAPSHOT</version>
+          <version>1.30</version>
         </dependency>
         
       </dependencies>
