--- a/scm-dao-xml/pom.xml
+++ b/scm-dao-xml/pom.xml
@@ -6,12 +6,12 @@
   <parent>
     <groupId>sonia.scm</groupId>
     <artifactId>scm</artifactId>
-    <version>1.30-SNAPSHOT</version>
+    <version>1.30</version>
   </parent>
   
   <groupId>sonia.scm</groupId>
   <artifactId>scm-dao-xml</artifactId>
-  <version>1.30-SNAPSHOT</version>
+  <version>1.30</version>
   <name>scm-dao-xml</name>
   
   <dependencies>
@@ -26,7 +26,7 @@
     <dependency>
       <groupId>sonia.scm</groupId>
       <artifactId>scm-core</artifactId>
-      <version>1.30-SNAPSHOT</version>
+      <version>1.30</version>
     </dependency>
     
     <!-- test -->
@@ -34,7 +34,7 @@
     <dependency>
       <groupId>sonia.scm</groupId>
       <artifactId>scm-test</artifactId>
-      <version>1.30-SNAPSHOT</version>
+      <version>1.30</version>
       <scope>test</scope>
     </dependency>
     
