disable cdi descovery for webapp, guava and jsersey-guava

--- a/pom.xml
+++ b/pom.xml
@@ -432,6 +432,9 @@
     <!-- repostitory libraries -->
     <jgit.version>3.0.0.201306101825-r</jgit.version>
     <svnkit.version>1.7.10-scm3</svnkit.version>
+    
+    <!-- util libraries -->
+    <guava.version>14.0.1</guava.version>
 
     <!-- build properties -->
     <project.build.javaLevel>1.6</project.build.javaLevel>
