--- a/scm-core/pom.xml
+++ b/scm-core/pom.xml
@@ -80,7 +80,7 @@
     <dependency>
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
-      <version>14.0.1</version>
+      <version>${guava.version}</version>
     </dependency>
     
     <dependency>
