--- a/scm-webapp/pom.xml
+++ b/scm-webapp/pom.xml
@@ -113,12 +113,8 @@
       <groupId>com.sun.jersey.contribs</groupId>
       <artifactId>jersey-guice</artifactId>
       <version>${jersey.version}</version>
-      <exclusions>
-        <exclusion>
-          <artifactId>jersey-grizzly2</artifactId>
-          <groupId>com.sun.jersey</groupId>
-        </exclusion>
-      </exclusions>
+      <!-- included by dependency rewrite -->
+      <scope>provided</scope>
     </dependency>
     
     <dependency>
@@ -187,6 +183,14 @@
       <groupId>asm</groupId>
       <artifactId>asm</artifactId>
       <version>3.3.1</version>
+    </dependency>
+    
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+      <version>${guava.version}</version>
+      <!-- included by dependency rewrite -->
+      <scope>provided</scope>
     </dependency>
     
     <!-- template engine -->
@@ -384,6 +388,54 @@
             </configuration>
           </execution>
         </executions>
+      </plugin>
+      
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-antrun-plugin</artifactId>
+        <version>1.6</version>
+        <executions>
+          <execution>
+            <id>repack</id>
+            <phase>compile</phase>
+            <goals>
+              <goal>run</goal>
+            </goals>
+            <configuration>
+              <target>
+                <!--
+                add beans.xml to jersey-guice and guava
+                -->
+                
+                <!-- jersey guice -->
+                
+                <unzip src="${com.sun.jersey.contribs:jersey-guice:jar}" dest="${project.build.directory}/tmp/jersey-guice"/>
+                <copy file="src/main/webapp/WEB-INF/beans.xml" toDir="${project.build.directory}/tmp/jersey-guice/META-INF" />
+                <zip basedir="${project.build.directory}/tmp/jersey-guice" destfile="${project.build.directory}/dependency-rewrite/WEB-INF/lib/jersey-guice-${jersey.version}.jar"/>
+                
+                <!-- guava -->
+                
+                <unzip src="${com.google.guava:guava:jar}" dest="${project.build.directory}/tmp/guava"/>
+                <copy file="src/main/webapp/WEB-INF/beans.xml" toDir="${project.build.directory}/tmp/guava/META-INF" />
+                <zip basedir="${project.build.directory}/tmp/guava" destfile="${project.build.directory}/dependency-rewrite/WEB-INF/lib/guava-${guava.version}.jar"/>
+                
+              </target>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+      
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-war-plugin</artifactId>
+        <version>2.2</version>
+        <configuration>
+          <webResources>
+            <resource>
+              <directory>${project.build.directory}/dependency-rewrite</directory>
+            </resource>
+          </webResources>
+        </configuration>
       </plugin>
 
       <plugin>
