fix release build

--- a/scm-webapp/pom.xml
+++ b/scm-webapp/pom.xml
@@ -543,6 +543,9 @@
                 <resource>
                   <directory>${project.build.directory}/web-compressor</directory>
                 </resource>
+                <resource>
+                  <directory>${project.build.directory}/dependency-rewrite</directory>
+                </resource>
               </webResources>
             </configuration>
           </plugin>
