prepare for custom subversion collection renderer

--- a/pom.xml
+++ b/pom.xml
@@ -431,7 +431,7 @@
 
     <!-- repostitory libraries -->
     <jgit.version>3.0.0.201306101825-r</jgit.version>
-    <svnkit.version>1.7.10-scm3</svnkit.version>
+    <svnkit.version>1.7.10-scm4-SNAPSHOT</svnkit.version>
     
     <!-- util libraries -->
     <guava.version>15.0</guava.version>
