suppress unchecked warnings

--- a/pom.xml
+++ b/pom.xml
@@ -182,6 +182,7 @@
           <source>${project.build.javaLevel}</source>
           <target>${project.build.javaLevel}</target>
           <encoding>${project.build.sourceEncoding}</encoding>
+           <compilerArgument>-Xlint:unchecked</compilerArgument>
         </configuration>
       </plugin>
 
