allow retrieving repositories by using type/name instead of repository id

--- a/scm-clients/scm-cli-client/src/main/resources/sonia/resources/i18n.properties
+++ b/scm-clients/scm-cli-client/src/main/resources/sonia/resources/i18n.properties
@@ -44,6 +44,7 @@ optionLoggingLevel = Logging level (DEBUG, INFO, WARN, ERROR)
 optionTemplate = Template
 optionTemplateFile = Template file
 optionRepositoryId = Repository Id
+optionRepositoryIdOrTypeAndName = Repository Id or type/name
 optionRepositoryName = Repository name
 optionRepositoryType = Repository name
 optionRepositoryContact = Repository contact
