enable animal-sniffer-maven-plugin on goal compile

--- a/pom.xml
+++ b/pom.xml
@@ -156,6 +156,14 @@
             <version>1.0</version>
           </signature>
         </configuration>
+        <executions>
+          <execution>
+            <phase>compile</phase>
+            <goals>
+              <goal>check</goal>
+            </goals>
+          </execution>
+        </executions>
       </plugin>
 
       <plugin>
