--- a/scm-clients/scm-cli-client/src/main/resources/sonia/resources/i18n.properties
+++ b/scm-clients/scm-cli-client/src/main/resources/sonia/resources/i18n.properties
@@ -57,7 +57,7 @@ optionPermissionName = Group or user name
 optionPermissionType = Permission type (READ,WRITE or OWNER)
 
 optionUserName = Username
-optionUserDisplayName = "Diesplay name
+optionUserDisplayName = Display name
 optionUserMail = E-Mail address 
 optionUserPassword = Password
 optionUserType = Type
