added annotation processor to write extension classes to plugin descriptor

--- a/scm-maven-plugins/pom.xml
+++ b/scm-maven-plugins/pom.xml
@@ -18,6 +18,7 @@
   <modules>
     <module>scm-plugin-archetype</module>
     <module>scm-maven-plugin</module>
+    <module>scm-annotation-processor</module>
   </modules>
 
 </project>
